crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__singleton_metadata.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let capture#6 : int = 2 in
letrec
  f#1 : int -> int -> int [static [0]] = \static#3 : int n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> addInteger static#3 capture#6
    False -> f#1 static#3 (subtractInteger n#4 1)
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
f#1 40 3
--- unoptimized UPLC
(program 1.1.0
  [(lam capture_6
    [(lam dispatch_7
      [(lam f_1
        [(lam dead_2 [[f_1 (con integer 40)] (con integer 3)])
          (lam z_17 [dispatch_7 (constr 1 dispatch_7 z_17)])])
        (lam static_18 (lam n_19 [dispatch_7 (constr 0 dispatch_7 static_18 n_19)]))])
      (lam request_8
        (case
          request_8
          (lam self_9
            (lam static_3
              (lam n_4
                (case
                  [[(builtin equalsInteger) n_4] (con integer 0)]
                  [self_9
                    (constr 0 self_9 static_3 [[(builtin subtractInteger) n_4] (con integer 1)])]
                  [[(builtin addInteger) static_3] capture_6]))))
          (lam self_13 (lam z_5 (error)))))])
    (con integer 2)])
--- optimized Core
letrec
  f#8 : int -> int -> int [static [0]] = \static#10 : int n#11 : int -> let anf#13 : bool = equalsInteger n#11 0 in
  case@Bool anf#13 of
    True -> addInteger static#10 2
    False -> let anf#14 : int -> int = f#8 static#10 in
    let anf#15 : int = subtractInteger n#11 1 in
    anf#14 anf#15
in
f#8 40 3
--- optimized UPLC
(program 1.1.0
  [(lam f_17 [[f_17 (con integer 40)] (con integer 3)])
    [(lam self_4 [self_4 self_4])
      (lam self_5
        (lam static_6
          (lam n_7
            [(lam anf_9
              (case
                anf_9
                [(lam anf_12
                  [(lam anf_16 [anf_12 anf_16]) [[(builtin subtractInteger) n_7] (con integer 1)]])
                  [[self_5 self_5] static_6]]
                [[(builtin addInteger) static_6] (con integer 2)]))
              [[(builtin equalsInteger) n_7] (con integer 0)]])))]])
--- isolated pass
--- core before
let capture#6 : int = 2 in
letrec
  f#1 : int -> int -> int [static [0]] = \static#3 : int n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> addInteger static#3 capture#6
    False -> f#1 static#3 (subtractInteger n#4 1)
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
f#1 40 3
--- uplc before
(program 1.1.0
  [(lam capture_6
    [(lam dispatch_7
      [(lam f_1
        [(lam dead_2 [[f_1 (con integer 40)] (con integer 3)])
          (lam z_17 [dispatch_7 (constr 1 dispatch_7 z_17)])])
        (lam static_18 (lam n_19 [dispatch_7 (constr 0 dispatch_7 static_18 n_19)]))])
      (lam request_8
        (case
          request_8
          (lam self_9
            (lam static_3
              (lam n_4
                (case
                  [[(builtin equalsInteger) n_4] (con integer 0)]
                  [self_9
                    (constr 0 self_9 static_3 [[(builtin subtractInteger) n_4] (con integer 1)])]
                  [[(builtin addInteger) static_3] capture_6]))))
          (lam self_13 (lam z_5 (error)))))])
    (con integer 2)])
--- core after
let capture#6 : int = 2 in
letrec
  f#1 : int -> int -> int [static [0]] = \static#3 : int n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> addInteger static#3 capture#6
    False -> f#1 static#3 (subtractInteger n#4 1)
in
f#1 40 3
--- uplc after
(program 1.1.0
  [(lam capture_6
    [(lam f_1 [[f_1 (con integer 40)] (con integer 3)])
      (lam static_3
        (lam n_4
          [[(lam self_20 [self_20 self_20])
            (lam self_20
              (lam n_4
                (case
                  [[(builtin equalsInteger) n_4] (con integer 0)]
                  [[self_20 self_20] [[(builtin subtractInteger) n_4] (con integer 1)]]
                  [[(builtin addInteger) static_3] capture_6])))]
            n_4]))])
    (con integer 2)])
--- result
(con integer 42)
--- logs
[]
