crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__unused_delayed_worker.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 68
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  worker#1 : @delay int [static []] = \ -> delay (case@Bool true of
    True -> 42
    False -> force worker#1)
in
7
--- unoptimized UPLC
(program 1.1.0
  [(lam worker_1 (con integer 7))
    [(lam self_2 [self_2 self_2])
      (lam self_2
        (delay (case (con bool True) (force [self_2 self_2]) (con integer 42))))]])
--- optimized Core
7
--- optimized UPLC
(program 1.1.0 (con integer 7))
--- isolated pass
--- core before
letrec
  worker#1 : @delay int [static []] = \ -> delay (case@Bool true of
    True -> 42
    False -> force worker#1)
in
7
--- uplc before
(program 1.1.0
  [(lam worker_1 (con integer 7))
    [(lam self_2 [self_2 self_2])
      (lam self_2
        (delay (case (con bool True) (force [self_2 self_2]) (con integer 42))))]])
--- core after
7
--- uplc after
(program 1.1.0 (con integer 7))
--- result
(con integer 7)
--- logs
[]
