crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__unused_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 68
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  f#1 : int -> int [static []] = \x#3 : int -> error
in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam f_1 (con integer 42))
    [(lam self_2 [self_2 self_2]) (lam self_2 (lam x_3 (error)))]])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
letrec
  f#1 : int -> int [static []] = \x#3 : int -> error
in
42
--- uplc before
(program 1.1.0
  [(lam f_1 (con integer 42))
    [(lam self_17 [self_17 self_17]) (lam self_17 (lam x_3 (error)))]])
--- core after
42
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
